# multi-rpc

./: Cargo.toml  README.md
examples/client_jsonrpc/: Cargo.toml
examples/client_jsonrpc/src/: main.rs
examples/client_rest/: Cargo.toml
examples/client_rest/src/: main.rs
examples/client_tarpc/: Cargo.toml
examples/client_tarpc/src/: main.rs
examples/server/: Cargo.toml
examples/server/src/: lib.rs  main.rs
multi-rpc/: Cargo.toml  README.md
multi-rpc-macros/: Cargo.toml  README.md
multi-rpc-macros/src/: lib.rs
multi-rpc-macros/src/protocols/: jsonrpsee.rs  mod.rs  rest_axum.rs  tarpc.rs
multi-rpc/src/: builder.rs  error.rs  lib.rs  prelude.rs  runner.rs
